<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1300</width>
    <height>700</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QWidget" name="bgwidget" native="true">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1500</width>
     <height>800</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(255, 255, 255);</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>410</x>
      <y>60</y>
      <width>881</width>
      <height>91</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Bangla MN</family>
      <pointsize>36</pointsize>
      <weight>50</weight>
      <italic>false</italic>
      <bold>false</bold>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 36pt;
background: transparent;
color: rgb(0,0,0);</string>
    </property>
    <property name="text">
     <string>Emissioni delle fatture dovute ai servizi</string>
    </property>
   </widget>
   <widget class="QPushButton" name="btnModifica">
    <property name="geometry">
     <rect>
      <x>70</x>
      <y>350</y>
      <width>221</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">border-radius:20px;
font: 14pt;
border: 1px solid rgb(176, 141, 48);</string>
    </property>
    <property name="text">
     <string>Modifica</string>
    </property>
   </widget>
   <widget class="QPushButton" name="btnCancella">
    <property name="geometry">
     <rect>
      <x>70</x>
      <y>430</y>
      <width>221</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">border-radius:20px;
font: 14pt;
border: 1px solid rgb(176, 141, 48);</string>
    </property>
    <property name="text">
     <string>Cancella</string>
    </property>
   </widget>
   <widget class="QPushButton" name="btnAggiungi">
    <property name="geometry">
     <rect>
      <x>70</x>
      <y>250</y>
      <width>221</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">border-radius:20px;
background-color: rgb(176, 141, 48);
font: 14pt;
color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>Aggiungi</string>
    </property>
   </widget>
   <widget class="QPushButton" name="btnEsci">
    <property name="geometry">
     <rect>
      <x>70</x>
      <y>530</y>
      <width>221</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">border-radius:20px;
font: 14pt;
border: 1px solid rgb(176, 141, 48);</string>
    </property>
    <property name="text">
     <string>Esci</string>
    </property>
   </widget>
   <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
      <x>460</x>
      <y>200</y>
      <width>811</width>
      <height>461</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background: rgb(255,255,255);
</string>
    </property>
    <column>
     <property name="text">
      <string>0</string>
     </property>
     <property name="font">
      <font>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
    </column>
    <column>
     <property name="text">
      <string>1</string>
     </property>
     <property name="font">
      <font>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
    </column>
   </widget>
  </widget>
 </widget>
 <resources>
  <include location="../source.qrc"/>
 </resources>
 <connections/>
</ui>
